@@ -29,14 +29,7 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.ListIterator;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -199,40 +192,42 @@ public class EventValidationService {
 
     public List<String> validateRespRepNames(CaseData caseData) {
         List<String> errors = new ArrayList<>();
-        if (CollectionUtils.isNotEmpty(caseData.getRespondentCollection())
-            && CollectionUtils.isNotEmpty(caseData.getRepCollection())) {
-            List<RepresentedTypeRItem> repCollection = caseData.getRepCollection();
-            List<RepresentedTypeRItem> updatedRepList = new ArrayList<>();
-            int repCollectionSize = caseData.getRepCollection().size();
+        List<RepresentedTypeRItem> repCollection = caseData.getRepCollection();
 
-            //reverse update it - from the last to the first element by removing repetition
-            for (int index = repCollectionSize - 1;  index > -1; index--) {
-                String tempCollCurrentName = repCollection.get(index).getValue()
-                    .getDynamicRespRepName().getValue().getLabel();
-                if (isValidRespondentName(caseData, tempCollCurrentName)) {
-                    if (!repCollection.isEmpty()
-                        && updatedRepList.stream()
-                        .noneMatch(r -> r.getValue().getDynamicRespRepName().getValue().getLabel()
-                            .equals(tempCollCurrentName))) {
-                        repCollection.get(index).getValue().setRespRepName(tempCollCurrentName);
-                        updatedRepList.add(repCollection.get(index));
-                    }
-                } else {
-                    errors.add(RESP_REP_NAME_MISMATCH_ERROR_MESSAGE + " - " + tempCollCurrentName);
-                    return errors;
-                }
-            }
-
-            //clear the old rep collection
-            if (repCollectionSize > 0) {
-                caseData.getRepCollection().subList(0, repCollectionSize).clear();
-            }
-
-            //populate the rep collection with the new & updated rep entries and
-            //sort the collection by respondent name
-            updatedRepList.sort((o1, o2) -> o1.getValue().getRespRepName().compareTo(o2.getValue().getRespRepName()));
-            caseData.setRepCollection(updatedRepList);
+        if (CollectionUtils.isEmpty(caseData.getRespondentCollection()) || CollectionUtils.isEmpty(repCollection)) {
+            return errors;
         }
+
+        List<RepresentedTypeRItem> updatedRepList = new ArrayList<>();
+        int repCollectionSize = repCollection.size();
+
+        //reverse update it - from the last to the first element by removing repetition
+        for (int index = repCollectionSize - 1;  index > -1; index--) {
+            String tempCollCurrentName = repCollection.get(index).getValue()
+                .getDynamicRespRepName().getValue().getLabel();
+            if (!isValidRespondentName(caseData, tempCollCurrentName)) {
+                errors.add(RESP_REP_NAME_MISMATCH_ERROR_MESSAGE + " - " + tempCollCurrentName);
+                return errors;
+            }
+
+            if (!repCollection.isEmpty()
+                && updatedRepList.stream()
+                .noneMatch(r -> r.getValue().getDynamicRespRepName().getValue().getLabel()
+                    .equals(tempCollCurrentName))) {
+                repCollection.get(index).getValue().setRespRepName(tempCollCurrentName);
+                updatedRepList.add(repCollection.get(index));
+            }
+        }
+
+        //clear the old rep collection
+        if (repCollectionSize > 0) {
+            repCollection.subList(0, repCollectionSize).clear();
+        }
+
+        //populate the rep collection with the new & updated rep entries and
+        //sort the collection by respondent name
+        updatedRepList.sort(Comparator.comparing(o -> o.getValue().getRespRepName()));
+        caseData.setRepCollection(updatedRepList);
 
         return errors;
     }
@@ -243,7 +238,7 @@ public class EventValidationService {
             var respRepNames = caseData.getRespondentCollection()
                 .stream()
                 .map(e -> e.getValue().getRespondentName())
-                .collect(Collectors.toList());
+                .toList();
 
             if (!respRepNames.isEmpty()) {
                 isValidName = respRepNames.contains(tempCollCurrentName);
@@ -544,7 +539,7 @@ public class EventValidationService {
                 log.info("Check if jurCodes collection within judgement exist in jurCodesCollection");
                 jurCodesDoesNotExist.addAll(jurCodesCollectionWithinJudgement.stream()
                         .filter(element -> !jurCodesCollection.contains(element))
-                        .collect(Collectors.toList()));
+                        .toList());
 
                 log.info("Check if jurCodes collection has duplicates");
                 populateJurCodesDuplicatedWithinJudgement(jurCodesCollectionWithinJudgement,
